<resources>
    <string name="app_name">CuteTogether</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="email_field_hint">Email</string>
    <string name="pwd_field_hint">Password</string>
    <string name="name_input_register">Name</string>
    <string name="match_confirm_btn">Cute</string>
    <string name="btn_match_deny">Meh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
